# automated-discussion-analysis-system

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/api/: .dockerignore  Dockerfile  GOOGLE_STT_REFERENCE.md  Google_STT_연동가이드.md  architecture.drawio  build.gradle.kts  도메인.md  용어사전.md
backend/api/src/diarization/: Dockerfile.gpu  diar_main.py  requirements.txt
backend/api/src/docs/: adas-pipeline.md  architecture.md  glossary.md
backend/api/src/docs/require/: codex_001.md  codex_002.md  codex_003.md  codex_004.md  codex_005.md  codex_006.md  codex_007.md  codex_008.md  codex_009.md  codex_010.md  codex_011.md  codex_012.md  codex_index.md
backend/api/src/main/resources/: application-local.yml  (+2 more)
backend/api/src/python-core/: pyproject.toml  settings.py
backend/api/src/python-core/processing-core/services/: alignment.py  diarization.py  recording.py
backend/api/src/python-core/processing-core/services/stt/: base.py  whisper_provider.py
backend/api/src/python-core/processing_core/: settings.py
backend/api/src/python-core/processing_core/services/: alignment.py  recording.py
backend/api/src/python-core/processing_core/services/stt/: factory.py  google_config.py  google_provider.py  whisper_provider.py
backend/api/src/stt/: Dockerfile  requirements.txt  stt_main.py
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  README.md  env.example  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue
frontend/src/components/: ApiSample.vue  Recorder.vue
frontend/src/router/: index.js
(+69 files in other folders)
